--- a/style.css
+++ b/style.css
@@ -67,13 +67,39 @@ nav ul li a:hover {
     margin-right: 10px;
     border: none;
 }
+.sec-two{
+    min-height: 100vh;
+    margin-top: 10%;
+    color: #12418D;
 
-.testimonials{
+}
+
+.row1{
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
+    gap: 2rem;
     margin-top: 10%;
 }
+.row1 img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+
+}
+.row1 .feature{
+    
+}
+.testimonial{
+    background-color: aquamarine;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-top: 10%;
+}
+
 
 /* Footer styles */
 footer {
