--- a/style.css
+++ b/style.css
@@ -1,165 +1,260 @@
-/* Reset default margin and padding */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Body styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    line-height: 1.6;
-}
-
-/* Header styles */
-header {
-    background-image: url(./images/img4.jpg);
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
+body{
+    margin: 0px;
+    padding: 0px;
     width: 100%;
 }
-
-.navbar {
-    padding:0.5rem;
-    background-color: aqua;
+nav {
+    margin: 0px;
+    padding: 0px;
+    padding-left: 25%;
+    position:fixed;
+    width: 100%;
+    height: fit-content;
+    background-color: rgb(60, 216, 195);
+    z-index: 3;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    display: flex;
-}
-
-nav ul li {
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: black;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-.header-container img{
-    width: 100%;
-    height: 100%;
-}
-.header-text-inner{
-    margin-left: 50%;
-    margin-top: 13%;
     text-align: center;
-}
-.header-text-inner .btn{
-    padding: 5px 10px;
-    background-color: aqua;
-    color: black;
-    text-decoration: none;
-    border-radius: 12px;
-    margin-right: 10px;
-    border: none;
-}
-.sec-two{
-    min-height: 100vh;
-    margin-top: 10%;
-    color: #12418D;
-
+    overflow: hidden;
 }
 
-.row1{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    gap: 2rem;
-    margin-top: 10%;
-}
-.row1 img{
+ul {
+    justify-content: right;
     width: 100%;
-    height: 100%;
-    border-radius: 15px;
+    list-style-type: none;
+   
+    /* overflow: hidden; */
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    color: #8f611c; 
+    font-size: 1.2em;
+    text-align: center;
+    margin: 14px 16px;
+    text-decoration: none;
+    height: 30px;
+}
+
+li a:hover {
+    color: rgb(245, 181, 44);
+    font-size: 1.3em;
+}
+@media (max-width: 502px) {
+    li a {
+        font-size: .7em;
+    }
+    li a:hover {
+        color: rgb(245, 181, 44);
+        font-size: .9em;
+    }
 
 }
-.row1 .feature{
+
+
+
+.home-section {
+    position: relative;
+    width: 100%; 
+    height: 100%; 
+    display: flex;
+    padding: 0%; 
+    margin:0%;
+    background-image: url('./static2/reproductive1.jpg');
+    background-size:contain;
+    /* background-color: #0a0a0a;  */
     
 }
-.testimonial{
-    background-color: aquamarine;
-    padding: 20px 30px;
+.home-section section{
+    width: 50%;height: 100%;
+    padding: 100px;
+    padding-top: 15%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     text-align: center;
-    margin-top: 10%;
+}
+.home-section section div{
+    width:100%;height: 30%;
+    
+}
+.home-section button{
+    font-size: 1.3em; margin-top: 30%;margin-left: 5%;border-radius: 50px  50px;padding: 25px 150px 25px 150px;;background-color: #0a0a0a;border-color: #fdfbfb;
+    
+ }
+ .home-section button p{
+    padding: 0;margin: 0;
+   
 }
 
-
-/* Footer styles */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 50px 0;
+.home-section section aside {
+    position: relative; font-size: 1.5em;margin-right: 0;margin-left: 60%;margin-top: 10%;font-family: Arial, Helvetica, sans-serif;
+   
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
+#homepage1{
+    font-size: 2em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(60, 216, 195);
+    text-align: left;
+    font-weight: bold;
+}
+#homepage2{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(3, 25, 145);
+    font-weight: bold;
+    text-align: left;
+    font-size: 1.2em;
 }
 
-.row {
-    margin-bottom: 20px;
+#homepage3{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: left;
+    color:  rgb(54, 81, 233);
 }
 
-.footer-about-contact h5 {
-    margin-bottom: 10px;
-}
-
-.footer-about-contact p {
-    margin-bottom: 20px;
-}
-
-.footer-search-form {
+.service-section {
+    position: relative;
+    width: 100%; 
+    height: 100%; 
     display: flex;
-    margin-bottom: 20px;
+    padding: 0%; 
+    margin:0%;
+    /* background-color: #0a0a0a;  */
+    
+}
+.service-section section{
+    width: 50%;height: 100%;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.service-section section div{
+    width:100%;height: 30%;
+    
 }
 
-.footer-search-form input {
-    flex: 1;
-    padding: 10px;
+.service1{
+    font-size: 1.5em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(60, 216, 195);
+    text-align: left;
+    font-weight: bold;
+}
+.service2{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: left;
+    color:  rgb(54, 81, 233);
 }
 
-.fa-subscribe {
-    padding: 10px;
-    background-color: #fff;
-    color: #333;
-    border: none;
-    cursor: pointer;
+#service_image{
+    width: 90%; height: 80%;  border-radius: 20%;   
+    margin-left: 8%;
 }
 
-.footer-social-icons a {
-    color: #fff;
-    margin-right: 10px;
+.feedback-section {
+    position: relative;
+    width: 100%; 
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    padding: 0%; 
+    margin:0%;
+    background-image: url('path/to/your/image.jpg');
+    /* background-color: #0a0a0a;  */
+    
+}
+.feedback-section section{
+    width: 100%;height: fit-content;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    padding-top: 10%;
 }
 
-/* Responsive styles */
-@media (max-width: 768px) {
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
+.feedback-section section h1 {
+    font-size: 2em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:    rgb(54, 81, 233);
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+.feedback-section section p {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:    rgb(54, 81, 233);
 
-    nav ul li {
-        margin: 10px 0;
-    }
+}
 
-    .grid-container2 {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
+#feedbacks{
+    padding-top: 5%;
+    height:fit-content;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+
+}
+.feedback-section section div {
+    text-align: left;
+    padding: 2%;
+    width: 20%;
+    border-radius: 10%; 
+    background-color: rgb(60, 216, 195);
+    color: whitesmoke;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.feedbacks2{
+    color:    rgb(3, 22, 133);
+    font-weight: bold;
+
+}
+
+.contact-section {
+    position: relative;
+    width: 100%; 
+    height: 40%;
+    display: flex;
+    padding: 0%; 
+    margin:0%;
+    background-color: rgb(29, 5, 133);
+    
+}
+.contact-section section{
+    width: 30%;
+    padding: 5%;
+
+}
+.contact-section section img{
+    
+    height: 30px;
+    width: 30px;
+}
+.contact1{
+    font-size: 1.5em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(60, 216, 195);
+    text-align: left;
+    font-weight: bold;
+}
+.contact2{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: left;
+    color:  rgb(54, 81, 233);
+}
+
+#image_section{
+    text-align: right;
+    padding-top: 15%;
+    padding-bottom: 0px;
 }
